--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,13 @@
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+auto-import.
+.idea/modules.xml
+.idea/*.iml
+.idea/*.xml
+.idea/modules
+*.iml
+*.ipr
 
 # CMake
 cmake-build-*/
@@ -69,3 +70,4 @@ fabric.properties
 
 __pycache__
 .idea
+edge_detection
